# agentic-governance

./: .dockerignore  .env.example  .gitignore  AUDIT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  docker-compose.obs.yml  pyproject.toml  requirements.txt
.github/workflows/: README.md  ci.yml
agent/: README.md  claims_planner.py  graph.py  harness_loader.py  llm.py  planner.py  runtime.py  tools.py  workflow.py
agent/policies/: runtime.yaml
agent/prompts/: system.md
api/: README.md  main.py
docs/: ADD-AN-AGENT.md  ADOPTERS.md  AI-SDLC.md  ARCHITECTURE.md  AUDIT-SCHEMA.md  CI.md  CONTROLS-MAP.md  EVIDENCE.md  GOVERNANCE-LAYERS.md  INTERVIEW-GUIDE.md  KPI.md  LANGGRAPH-PLAN.md  LOCAL.md  RUNTIME-GOVERNANCE.md  SECOND-VERTICAL.md  SEMANTIC-HARNESS-BRIDGE.md  SYNTHETIC-DATA.md  WHITEPAPER.md
evaluation/: README.md  claims_regression.py  grounding.py  hallucination.py  latency.py  phi.py  prompt_regression.py
evaluation/baselines/: golden.jsonl
governance/: README.md  audit.py  authorization.py  claims_authorization.py  evidence.py  output_guardrails.py  request_context.py  score.py  tool_tiers.py
harness/: harness.jsonld
harness/examples/: claims-assistant.jsonld
knowledge/: README.md  claims_store.py  synthetic.py
knowledge/data/: claims.json  (+1 more)
observability/: README.md  metrics.py  prometheus.yml
scripts/: demo_workflow.py  live_graph_cases.py  showcase.py  smoke_langgraph.py  static_phi_hygiene.py  validate_harness.py
tests/: conftest.py  test_api.py  test_api_auth.py  test_authorization.py  test_claims.py  test_evidence.py  test_graph.py  test_harness_loader.py  test_policy.py  test_request_id.py  test_runtime.py  test_tool_tiers.py  test_tools.py
ui/: index.html
(+3 files in other folders)
